# christmas

./: .env.example  .env.prod.example  .gitignore  Claude.md  DEPLOYMENT.md  QUICKSTART.md  README.md  REQUIREMENTS.md  docker-compose.prod.yml  docker-compose.yml  setup.sh
backend/: .env.example  Dockerfile  README.md  create_superuser.py  pyproject.toml  requirements.txt
backend/accounts/: urls.py  views.py
backend/accounts/management/commands/: ensure_superuser.py
backend/config/: settings.py  urls.py
backend/letters/: admin.py  models.py  schemas.py  serializers.py  urls.py  views.py
backend/letters/migrations/: 0001_initial.py  0002_alter_letter_custom_properties_and_more.py
frontend/: .dockerignore  .env.development  Dockerfile  Dockerfile.prod  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: CloseButton.tsx  EnvelopeAnimation.tsx  ErrorState.tsx  LetterContent.tsx  LetterHeader.tsx  LoadingState.tsx  TextBlock.tsx
frontend/src/pages/admin/: AdminDashboard.tsx  AdminLoginPage.tsx  LetterFormPage.tsx  LetterListPage.tsx  LetterTypeListPage.tsx
frontend/src/pages/public/: LandingPage.tsx  PublicLetterPage.tsx
frontend/src/stores/: authStore.ts  letterInteractionStore.ts  letterStore.ts  letterTypeStore.ts
frontend/src/types/: index.ts
nginx/conf.d/: default.conf
